--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,24 +1,22 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Content/Vakoncraft/Maps/MainMap.MainMap
-EditorStartupMap=/Game/Content/Vakoncraft/Maps/MainMap.MainMap
+GameDefaultMap = /Game/Content/Vakoncraft/Maps/MainMap.MainMap
+EditorStartupMap = /Game/Content/Vakoncraft/Maps/MainMap.MainMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
+TargetedHardwareClass = Desktop
+AppliedTargetedHardwareClass = Desktop
+DefaultGraphicsPerformance = Maximum
+AppliedDefaultGraphicsPerformance = Maximum
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
-DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+DefaultGraphicsRHI = DefaultGraphicsRHI_DX12
 
 [/Script/Engine.RendererSettings]
-r.SkinCache.CompileShaders=True
-r.RayTracing=True
+r.SkinCache.CompileShaders = True
+r.RayTracing = True
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Vakoncraft")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Vakoncraft")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="VakoncraftGameModeBase")
++ActiveGameNameRedirects = (OldGameName="TP_Blank",NewGameName="/Script/Vakoncraft")
++ActiveGameNameRedirects = (OldGameName="/Script/TP_Blank",NewGameName="/Script/Vakoncraft")
++ActiveClassRedirects = (OldClassName="TP_BlankGameModeBase",NewClassName="VakoncraftGameModeBase")
 
