Made toolbar scroll system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -20,3 +20,8 @@ r.RayTracing = True
 +ActiveGameNameRedirects = (OldGameName="/Script/TP_Blank",NewGameName="/Script/Vakoncraft")
 +ActiveClassRedirects = (OldClassName="TP_BlankGameModeBase",NewClassName="VakoncraftGameModeBase")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Vakoncraft.MainCharacter.ToolbarIndex",NewName="/Script/Vakoncraft.MainCharacter.ToolbarCellIndex")
++PropertyRedirects=(OldName="/Script/Vakoncraft.MainCharacter.MinToolbarIndex",NewName="/Script/Vakoncraft.MainCharacter.MinToolbarCellIndex")
++PropertyRedirects=(OldName="/Script/Vakoncraft.MainCharacter.MaxToolbarIndex",NewName="/Script/Vakoncraft.MainCharacter.MaxToolbarCellIndex")
